// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<About/> Snapshot renders without crashing using mount 1`] = `
<About>
  <section
    id="about"
  >
    <h2>
      button.about_me
    </h2>
    <styled.div>
      <div
        className="sc-bdnxRM cYgjXS"
      >
        <p>
          desc.about_1
        </p>
        <p>
          desc.about_2
        </p>
      </div>
    </styled.div>
  </section>
</About>
`;

exports[`<About/> Snapshot renders without crashing using render 1`] = `
<section
  id="about"
>
  <h2>
    button.about_me
  </h2>
  <div
    class="sc-bdnxRM cYgjXS"
  >
    <p>
      desc.about_1
    </p>
    <p>
      desc.about_2
    </p>
  </div>
</section>
`;

exports[`<About/> Snapshot renders without crashing using shallow 1`] = `
<section
  id="about"
>
  <h2>
    button.about_me
  </h2>
  <styled.div>
    <p>
      desc.about_1
    </p>
    <p>
      desc.about_2
    </p>
  </styled.div>
</section>
`;
